bug 73970 - Tooltips disappear when at bottom of screen

Actually just fixes tooltips so they don't flip to the left of the mouse pointer when they extend off the right edge of the screen.

r=me, sr=bryner@netscape.com
patch by zipo13@myrealbox.com